# bag_emg

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: emg_bag.launch
src/: bag_emg.cpp
