<?xml version="1.0"?>
<package format="2">
  <name>bag_emg</name>
  <version>0.0.0</version>
  <description>The bag_emg package</description>

  <maintainer email="yujun.lai@student.uts.edu.au">Yujun Lai</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>track_robot_msgs</build_depend>
  <build_depend>labjackt7test_msgs</build_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>track_robot_msgs</build_export_depend>
  <build_export_depend>labjackt7test_msgs</build_export_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>track_robot_msgs</exec_depend>
  <exec_depend>labjackt7test_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
